flex핵심정리#3-전체 아이템 정렬

--- a/flex/00-blank.html
+++ b/flex/00-blank.html
@@ -9,16 +9,11 @@
     <style>
       .flex-container {
         display: flex;
-        flex-direction: column;
-      }
-      @media (min-width: 600px) {
-        .flex-container {
-          flex-direction: row;
-        }
-        .flex-item {
-          flex: 1;
-          /* 1 1 0 */
-        }
+        height: 300px;
+        flex-wrap: wrap;
+        /* justify-content: space-between; */
+        /* align-items: center; */
+        align-content: flex-end;
       }
     </style>
   </head>
